# esp-idf-clock

clocks-main/: .gitignore  CMakeLists.txt  README.md
clocks-main/main/: CMakeLists.txt  Kconfig.projbuild  global_event_group.h  main.c
clocks-main/main/display/: display.c  display.h
clocks-main/main/led/: led.c
clocks-main/main/light/: light.c  light.h
clocks-main/main/ota_update/: ota_update.c  ota_update.h
clocks-main/main/system_state/: system_state.c  system_state.h
clocks-main/main/temperature_from_api/: temperature_from_api.c  temperature_from_api.h
clocks-main/main/temperature_from_sensor/: temperature_from_sensor.c  temperature_from_sensor.h
clocks-main/main/time/: external_timer.c  external_timer.h  ntp.c  ntp.h
clocks-main/main/wifi/: wifi.c  wifi.h
